# axum-example-rs

./: .env  Cargo.toml  README.md  sqlite.db  todos.db
migrations/: 20241228142227_create_todos_table.sql  20250104082208_create_user.sql  20250104130942_create_thread.sql  20250104134449_create_follow.sql  20250104134810_create_likes.sql  20250104134814_create_views.sql
src/: app_state.rs  db.rs  lib.rs  main.rs  model.rs  router.rs
src/controllers/: mod.rs  user_ctrl.rs
src/models/: mod.rs  user_model.rs
src/queries/: follow.rs  like.rs  mod.rs  thread.rs  user.rs  view.rs
src/routes/: health_check.rs  mod.rs
src/routes/users/: login.rs  mod.rs  register.rs
src/services/: mod.rs  user_service.rs
src/storage/: mod.rs  user_storage.rs
src/utilities/: error.rs  password.rs
tests/: quick_dev.rs
