[package]
name = "axum-example-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
dotenv = "0.15.0"
serde = { version="1.0.217", features=["derive"] }
serde_json = "1.0.134"
sqlx = { version="0.8.2", features=["sqlite", "runtime-tokio-rustls"] }
tokio = { version="1.42.0", features=["full"] }
uuid = { version="1.11.0", features=["serde", "v4"] }

