[package]
name = "axum-example-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1.0.95"
httpc-test = "0.1.10"
